tests/errors/syntax_errors/empty_class.py
# pylint: disable=missing-function-docstring, missing-module-docstring
class A(object):
        pass
